--- a/main1.css
+++ b/main1.css
@@ -36,7 +36,7 @@ h2 {
 
 /* Chemistry Image Code */
 
-div1 {
+section2 {
     float: right;
     padding: 5px 0px 0px 5px;
     border: 2px solid black;
