--- a/main1.css
+++ b/main1.css
@@ -171,7 +171,7 @@ section {
     top: 0;
     left: 0;
     width: 100%;
-    height: 240vh;
+    height: absolute;
     box-sizing: border-box;
     padding: 75px;
     transition: 0s;
