--- a/main2.css
+++ b/main2.css
@@ -88,7 +88,7 @@ section {
     top: 0;
     left: 0;
     width: 100%;
-    height: 190vh;
+    height: absolute;
     box-sizing: border-box;
     padding: 75px;
     transition: 0s;
