--- a/math.css
+++ b/math.css
@@ -37,7 +37,7 @@ section {
     top: 0;
     left: 0;
     width: 100%;
-    height: 180vh;
+    height: absolute;
     box-sizing: border-box;
     padding: 75px;
     transition: 0s;
@@ -59,7 +59,7 @@ ul1 {
     height: 30px;
     z-index:1;
     border: 1px solid #000;
-    border-radius; 4px;
+    border-radius: 4px;
     cursor: pointer;
     overflow: hidden;
 }
